# kovplus

./: .gitignore  README.md  demo.cpp  kovplus.cpp  kovplus.hpp  meson.build
inc/: sentence.hpp
src/: kovplus.cpp  kovplus.hpp  sentence.cpp
subprojects/: fmt.wrap
